[metadata]

name = matched_markets_fixed
version = 0.0.1
author = Nikhil Tellakula
author_email = nikhilt@umich.edu
description = Duplicating Google's Matched Markets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ntellakula/matched_markets_fixed
project_urls =
    Bug Tracker = https://github.com/ntellakula/matched_markets_fixed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
